--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://47.104.203.206:3306/Test
+    url: jdbc:mysql://127.0.0.0:3306/Test?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: beyondys
     type: com.alibaba.druid.pool.DruidDataSource
@@ -10,16 +10,24 @@ spring:
     initialSize: 5
 
   rabbitmq:
-    addresses: 47.104.203.206
+    addresses: 127.0.0.0
     port: 5672
 
   redis:
     port: 6379
-    host: 47.104.203.206
+    host: 127.0.0.0
     password: beyondys
+
+  data:
+    elasticsearch:
+      cluster-name: elasticsearch
+      cluster-nodes: 127.0.0.0:9300
+      repositories:
+        enabled: true
+
 
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
 
-debug: true
+#debug: true
