--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.0:3306/Test?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://39.105.60.201:3306/Test?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: beyondys
+    password: ys201015
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
     maxActive: 20
@@ -10,18 +10,18 @@ spring:
     initialSize: 5
 
   rabbitmq:
-    addresses: 127.0.0.0
+    addresses: 39.105.60.201
     port: 5672
 
   redis:
     port: 6379
-    host: 127.0.0.0
-    password: beyondys
+    host: 39.105.60.201
+    password: ys201015
 
   data:
     elasticsearch:
       cluster-name: elasticsearch
-      cluster-nodes: 127.0.0.0:9300
+      cluster-nodes: 39.105.60.201:9300
       repositories:
         enabled: true
 
